--- a/timer.html
+++ b/timer.html
@@ -2,54 +2,154 @@
 <html>
 <head>
 <style>
+  /* Base Settings */
   body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif;
-    background-color: transparent; /* Matches Notion Background */
-    color: #37352f;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background-color: transparent;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     height: 100vh;
     margin: 0;
   }
-  
-  /* Dark Mode Support via URL parameter ?theme=dark */
-  body.dark { color: rgba(255, 255, 255, 0.9); }
 
-  #timer {
-    font-size: 2.5rem;
+  /* The Main Card Container */
+  .container {
+    background: white;
+    padding: 20px 30px;
+    border-radius: 16px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
+  /* Dark Mode Support for Container */
+  body.dark .container {
+    background: #202020;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+    color: white;
+  }
+
+  /* Title "Time Elapsed" */
+  .header {
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: #eb5757; /* Reddish accent like your image */
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  }
+
+  /* The Row of Number Cards */
+  .timer-row {
+    display: flex;
+    gap: 12px;
+    text-align: center;
+  }
+
+  /* Individual Digit Group (Box + Label) */
+  .time-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+  }
+
+  /* The Dark Number Box */
+  .number-box {
+    background: #1f1f1f; /* Dark Card Color */
+    color: white;
+    font-size: 2rem;
     font-weight: 700;
-    font-variant-numeric: tabular-nums; /* Keeps numbers from jumping */
-    margin-bottom: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-variant-numeric: tabular-nums;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   }
-  
-  .controls { display: flex; gap: 10px; }
-  
-  button {
-    background: #e1e1e1;
-    border: none;
-    padding: 6px 12px;
-    border-radius: 4px;
-    cursor: pointer;
+
+  /* Labels (Days, Hours...) */
+  .label {
+    font-size: 0.75rem;
+    color: #888;
     font-weight: 500;
-    color: #37352f;
-    transition: background 0.2s;
   }
+
+  /* Buttons */
+  .controls {
+    display: flex;
+    gap: 10px;
+    margin-top: 5px;
+  }
+
+  button {
+    background: #f0f0f0;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+    color: #333;
+    font-size: 0.85rem;
+    transition: all 0.2s ease;
+  }
+
+  button:hover { background: #e0e0e0; }
   
-  button:hover { background: #d0d0d0; }
-  button.active { background: #2eaadc; color: white; }
-  
-  body.dark button { background: #505050; color: white; }
-  body.dark button:hover { background: #606060; }
+  button.active {
+    background: #eb5757; /* Matches header accent */
+    color: white;
+  }
+
+  body.dark button { background: #3a3a3a; color: #ddd; }
+  body.dark button:hover { background: #4a4a4a; }
+  body.dark button.active { background: #eb5757; color: white; }
+
 </style>
 </head>
 <body>
 
-<div id="timer">0d 00:00:00</div>
-<div class="controls">
-  <button id="startBtn" onclick="toggleTimer()">Start</button>
-  <button onclick="resetTimer()">Reset</button>
+<div class="container">
+  
+  <div class="header">
+    <span>⏱️ Stopwatch</span>
+  </div>
+
+  <div class="timer-row">
+    <div class="time-group">
+      <div class="number-box" id="days">00</div>
+      <span class="label">Days</span>
+    </div>
+    
+    <div class="time-group">
+      <div class="number-box" id="hours">00</div>
+      <span class="label">Hours</span>
+    </div>
+
+    <div class="time-group">
+      <div class="number-box" id="minutes">00</div>
+      <span class="label">Minutes</span>
+    </div>
+
+    <div class="time-group">
+      <div class="number-box" id="seconds">00</div>
+      <span class="label">Second</span>
+    </div>
+  </div>
+
+  <div class="controls">
+    <button id="startBtn" onclick="toggleTimer()">Start</button>
+    <button onclick="resetTimer()">Reset</button>
+  </div>
+
 </div>
 
 <script>
@@ -58,7 +158,6 @@
   let timerInterval;
   let running = false;
 
-  // Check for dark mode preference in URL (e.g. mywidget.html?theme=dark)
   const urlParams = new URLSearchParams(window.location.search);
   if (urlParams.get('theme') === 'dark') {
     document.body.classList.add('dark');
@@ -70,15 +169,19 @@
       time += Date.now() - startTime;
     }
 
-    const seconds = Math.floor((time / 1000) % 60);
-    const minutes = Math.floor((time / (1000 * 60)) % 60);
-    const hours = Math.floor((time / (1000 * 60 * 60)) % 24);
-    const days = Math.floor(time / (1000 * 60 * 60 * 24));
+    const totalSeconds = Math.floor(time / 1000);
+    const s = totalSeconds % 60;
+    const m = Math.floor(totalSeconds / 60) % 60;
+    const h = Math.floor(totalSeconds / 3600) % 24;
+    const d = Math.floor(totalSeconds / (3600 * 24));
 
+    // Helper to add leading zero (e.g., 5 -> 05)
     const f = (num) => num.toString().padStart(2, '0');
-    
-    document.getElementById("timer").textContent = 
-      `${days}d ${f(hours)}:${f(minutes)}:${f(seconds)}`;
+
+    document.getElementById("days").textContent = f(d);
+    document.getElementById("hours").textContent = f(h);
+    document.getElementById("minutes").textContent = f(m);
+    document.getElementById("seconds").textContent = f(s);
   }
 
   function toggleTimer() {
@@ -94,7 +197,7 @@
       // Start
       running = true;
       startTime = Date.now();
-      timerInterval = setInterval(updateDisplay, 100); // Update every 100ms
+      timerInterval = setInterval(updateDisplay, 100);
       btn.textContent = "Pause";
       btn.classList.add("active");
     }
