--- a/timer.html
+++ b/timer.html
@@ -139,7 +139,7 @@
   //      To RESET: Leave the quotes empty ""
   // ==========================================
   
-  const START_TIME_STRING = "2025-12-25 07:30:00";  
+  const START_TIME_STRING = "";  
 
   // ==========================================
   
