--- a/timer.html
+++ b/timer.html
@@ -139,7 +139,7 @@
   //      To RESET: Leave the quotes empty ""
   // ==========================================
   
-  const START_TIME_STRING = "";  
+  const START_TIME_STRING = "2026-02-22 05:00:00";  
 
   // ==========================================
   
